# Movie_Recommendation_System

./: .gitignore  CMakeLists.txt  README.md
Data/: Data_Clean.ipynb  imdb_top_1000_cleaned.csv
Data/Smart_Match/: movies.csv
Smart_Match/: main.py  movie_display.py  movie_selector.py  user_interact.py
header/: Display.h  Loadfile.h  Movie.h  MovieFilter.h  MovieList.h
src/: CMakeLists.txt  Display.cpp  LoadFile.cpp  MovieFilterDirector.cpp  MovieFilterGenre.cpp  MovieFilterRating.cpp  MovieFilterStar.cpp  MovieFilterYear.cpp  MovieFilterYearRange.cpp  MovieList.cpp
test/: CMakeLists.txt  Demo.cpp  testDisplay.cpp  testLoadFile.cpp  testMovie.cpp  testMovieFilterDirector.cpp  testMovieFilterGenre.cpp  testMovieFilterRating.cpp  testMovieFilterStar.cpp  testMovieFilterYear.cpp  testMovieFilterYearRange.cpp  testMovieList.cpp
test/loadFileTestCSVs/: imdb_top_1000_FIXED.csv  test1.csv  test2.csv
